# attention-search

./: .flake8  .gitignore  README.md  pyproject.toml
ann_benchmarks/: nmslib_knn.py
encoders/: conveRT.py  unisenc.py  utils.py
lib/: __init__.py  attention_search.py
notebooks/: Examples and Benchmarks.ipynb  Image Examples.ipynb  Text Examples.ipynb
notebooks/conveniences/: datasets.py  flowers.py  img_vec.py
perf/: einsum.py
src/: attention_search.py
tests/: test_attention_search.py
