[tool.poetry]
name = "attention-search"
version = "0.1.0"
description = ""
authors = ["crodriguez1a <crodriguez1a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"
numpy = "<1.19.0"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
autoflake = "^1.3.1"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^5.1.4"
pytest = "^5.4.3"
jupyter = "^1.0.0"
pandas = "^1.0.5"
matplotlib = "^3.3.0"
tensorflow = "2.3.0-rc1"
torch = "^1.5.1"
tensorflow_hub = "^0.8.0"
tensorflow-text = "2.3.0-rc1"
taskipy = "^1.2.1"
snakeviz = "^2.1.0"
ipyplot = "^1.0.5"

[tool.taskipy.tasks]
test = "python -m pytest"
clean = "black . && flake8 . && isort . && mypy . "

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
